--- a/Gallery.html
+++ b/Gallery.html
@@ -42,7 +42,7 @@
 
         <div class="skill">
             <h4>Skill Training (2024)</h4>
-           <!-- <img src="SK1.jpg" alt="" height="340px" width="360px">
+           <img src="SK1.jpg" alt="" height="340px" width="360px">
            <img src="SK2.jpg" alt="" height="340px" width="360px">
             <img src="SK3.jpg" alt="" height="340px" width="360px">
             <img src="SK4.jpg" alt="" height="340px" width="360px">
@@ -58,7 +58,7 @@
             <img src="SK14.jpg" alt="" height="340px" width="360px">
             <img src="SK15.jpg" alt="" height="340px" width="360px">
 
-        </div>--> 
+        </div>
 
         <div class="hand2">
             <h4>Handing Over(2024)</h4>
@@ -79,7 +79,7 @@
 
         <div>
             <h4>Patron's Send off (16/10/2024)</h4>
-           <!-- <img src="patron.jpg" alt="" height="340px" width="360px">
+           <img src="patron.jpg" alt="" height="340px" width="360px">
             <img src="patron8.jpg" alt="" height="340px" width="360px">
             <img src="patron1.jpg" alt="" height="340px" width="360px">
             <img src="patron3.jpg" alt="" height="340px" width="360px">
@@ -97,7 +97,7 @@
             <img src="patron13.jpg" alt="" height="340px" width="360px">
             <img src="patron14.jpg" alt="" height="340px" width="360px">
             <img src="patron16.jpg" alt="" height="340px" width="360px">
-        </div>-->
+        </div>
        
     </div><br>
             <h4>CONTACT NADSU-UCC</h4>
