--- a/Gallery.html
+++ b/Gallery.html
@@ -29,8 +29,8 @@
         </div>
         <div class="hand">
             <h4>Handing Over(2023)</h4>
-            <!--<img src="n13.jpg" alt="" height="300px" width="240px">
-            <img src="n14.jpg" alt="" height="300px" width="240px">-->
+            <img src="n13.jpg" alt="" height="300px" width="240px">
+            <img src="n14.jpg" alt="" height="300px" width="240px">
             <img src="n2.jpg" alt="" height="300px" width="360px">
             <img src="n3.jpg" alt="" height="300px" width="360px">
             <img src="n5.jpg" alt="" height="300px" width="300px">
@@ -62,7 +62,7 @@
 
         <div class="hand2">
             <h4>Handing Over(2024)</h4>
-            <!--<img src="hd1.jpg" alt="" height="340px" width="360px">-->
+            <img src="hd1.jpg" alt="" height="340px" width="360px">
             <img src="hd2.jpg" alt="" height="340px" width="360px">
             <img src="hd3.jpg" alt="" height="340px" width="360px">
             <img src="hd4.jpg" alt="" height="340px" width="360px">
@@ -72,7 +72,7 @@
             
             <img src="hd10.jpg" alt="" height="340px" width="360px">
             <img src="hd11.jpg" alt="" height="340px" width="360px">
-        <!--<img src="hd12.jpg" alt="" height="340px" width="360px">-->
+        <img src="hd12.jpg" alt="" height="340px" width="360px">
             <img src="hd13.jpg" alt="" height="340px" width="360px">
             <!--<img src="hd9.jpg" alt="" height="340px" width="360px">-->
         </div>
