--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
         </section><br><br>
 
-        <button onclick="payDues()" class="dues">Click To Pay Dues</button>
+        <button onclick="payDues()" class="dues">Click To Pay Dues</button><br><br>
 
         <h4>CONTACT US</h4>
     <div class="contact">
