--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a href="mailto:Nadsuucclocal@gmail.com" target="_blank">
             <img src="mail.png" alt="Email" height="38px" width="32px">
         </a>
-    </div>
+    </div><br><br>
 
     
     <div class="social-icons">
