--- a/board.html
+++ b/board.html
@@ -70,9 +70,9 @@
            <!--<img src="whatsapp.png" height="30px" width="30px">--> 
            Whatsapp Channel
         </a> 
-    </p> 
+    </p> <br><br>
 
-    </div><br>
+    </div>
 
 </body>
 </html>
